Explicitly list all transitive dependencies that we use
Co-Authored-By: Sören Reichardt <soren.reichardt@neotechnology.com>